RESOLVED FIXED257105
[SVG] Interval should not be created if a value in begin-value-list doesn't have a matching value in end-value-list
https://bugs.webkit.org/show_bug.cgi?id=257105
Summary [SVG] Interval should not be created if a value in begin-value-list doesn't h...
Ahmad Saleem
Reported 2023-05-21 12:17:11 PDT
Hi Team, Another failing test case in Safari / WebKit: Test Case - https://jsfiddle.net/gb08xvcq/ Blink Commit - https://src.chromium.org/viewvc/blink?view=revision&revision=157739 Already merged this local patch and we pass this test, this test is not on WPT though. Just wanted to raise so we can fix this as well. Thanks!
Attachments
EWS
Comment 1 2023-05-27 16:45:52 PDT
Committed 264635@main (0d691ef763d7): <https://commits.webkit.org/264635@main> Reviewed commits have been landed. Closing PR #14158 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-05-27 16:46:17 PDT
Note You need to log in before you can comment on or make changes to this bug.