[SVG] Interval should not be created if a value in begin-value-list doesn't have a matching value in end-value-list

https://bugs.webkit.org/show_bug.cgi?id=257105

Reviewed by Simon Fraser.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium.

Merge: https://src.chromium.org/viewvc/blink?view=revision&revision=157739

Here http://www.w3.org/TR/SMIL3/smil-timing.html#q90 , it says
that if all ends are before the current begin, then it is a bad interval
and current begin will be discarded.
Existing code is treating it as a valid interval with end as indefinite.
Modified the logic to be in line with the pseudo code.

* Source/WebCore/svg/animation/SVGSMILElement.cpp:
(SVGSMILElement::findInstanceTime): change 'return' value
(SVGSMILElement::resolveNextInterval): Change to 'bool'
(SVGSMILElement::seekToIntervalCorrespondingToTime): Modify 'resolveNextInterval' in 'if' condition
* Source/WebCore/svg/animation/SVGSMILElement.h: 'resolveNextInterval' to bool
* LayoutTests/resources/SVGAnimationTestCase-testharness.js: Move this to 'resource' folder as well
* LayoutTests/svg/animations/animate-no-matching-end-value.html: Add Test Case
* LayoutTests/svg/animations/animate-no-matching-end-value-expected.txt: Add Test Case Expectation

Canonical link: https://commits.webkit.org/264635@main